--- a/drivers/net/usb/Makefile
+++ b/drivers/net/usb/Makefile
@@ -2,6 +2,8 @@
 # Makefile for USB Network drivers
 #
 
+EXTRA_CFLAGS += -Wno-misleading-indentation
+
 obj-$(CONFIG_USB_CATC)		+= catc.o
 obj-$(CONFIG_USB_KAWETH)	+= kaweth.o
 obj-$(CONFIG_USB_PEGASUS)	+= pegasus.o
